# rustylens

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  Taskfile.yml  build.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  update.json  vite.config.js
.beads/: config.yaml  issues.jsonl
.github/workflows/: deploy.yml  homebrew-tap.yml  release.yml  test.yml
docs/distribution/: homebrew.md  winget.md
packaging/winget/: release-checklist.md
packaging/winget/templates/: DEVtheOPS.Kore.installer.yaml  DEVtheOPS.Kore.locale.en-US.yaml  DEVtheOPS.Kore.yaml
scripts/: generate-update-json.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: cluster_manager.rs  image_utils.rs  import.rs  k8s.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/k8s/: common.rs  deployment.rs  metrics.rs  mod.rs  pod.rs  statefulset.rs  workload.rs
src/lib/components/: BottomDrawer.svelte  ClusterImportModal.svelte  DeploymentDetailDrawer.svelte  IconSidebar.svelte  PodDetailDrawer.svelte  Sidebar.svelte
src/lib/components/ui/: DataTable.svelte  Drawer.svelte
src/lib/stores/: cluster.svelte.ts  header.test.ts  settings.svelte.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/cluster/[id]/cluster-roles/: +page.svelte
src/routes/cluster/[id]/config-maps/: +page.svelte
src/routes/cluster/[id]/deployments/: +page.svelte
src/routes/cluster/[id]/endpoints/: +page.svelte
src/routes/cluster/[id]/hpa/: +page.svelte
src/routes/cluster/[id]/ingresses/: +page.svelte
src/routes/cluster/[id]/limit-ranges/: +page.svelte
src/routes/cluster/[id]/network-policies/: +page.svelte
src/routes/cluster/[id]/pdb/: +page.svelte
tests/: 01-layout-navigation.spec.ts  02-icon-sidebar.spec.ts  03-cluster-overview.spec.ts  04-cluster-import.spec.ts  05-settings.spec.ts  06-cluster-routes.spec.ts  TESTING.md
(+8 files in other folders)
