[package]
name = "kore"
version = "0.1.1"
description = "Kubernetes Orchestration and Resource Explorer"
authors = ["DEVtheOPS"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-websocket = "2"
kube = { version = "3.0.1", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
dirs = "6.0.0"
futures = "0.3.31"
chrono = "0.4.43"
notify = "8.2.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
serde_yaml = "0.9.34"
image = { version = "0.25.9", features = ["png", "jpeg"] }
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[dev-dependencies]
tempfile = "3.24.0"
